changes in pom.xml to include test