@@ -6,34 +6,98 @@
   <name>Anupam's webdriver project</name>
   <description>this is my project</description>
   <dependencies>
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-java</artifactId>
-                <version>2.35.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.opera</groupId>
-                <artifactId>operadriver</artifactId>
-            </dependency>
-			<dependency>
-				<groupId>org.testng</groupId>
-				<artifactId>testng</artifactId>
-				<version>6.8.7</version>
-			</dependency>
-        </dependencies>
-        <dependencyManagement>
-            <dependencies>
-                <dependency>
-                    <groupId>com.opera</groupId>
-                    <artifactId>operadriver</artifactId>
-                    <version>1.3</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.seleniumhq.selenium</groupId>
-                            <artifactId>selenium-remote-driver</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-            </dependencies>
-        </dependencyManagement>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.35.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.opera</groupId>
+            <artifactId>operadriver</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.7</version>
+		</dependency>
+   </dependencies>
+   <dependencyManagement>
+       <dependencies>
+           <dependency>
+               <groupId>com.opera</groupId>
+               <artifactId>operadriver</artifactId>
+               <version>1.3</version>
+               <exclusions>
+                   <exclusion>
+                       <groupId>org.seleniumhq.selenium</groupId>
+                       <artifactId>selenium-remote-driver</artifactId>
+                   </exclusion>
+               </exclusions>
+           </dependency>
+       </dependencies>
+   </dependencyManagement>
+   
+   <build>
+		<sourceDirectory>src/main/java/com/anupam</sourceDirectory>
+        <plugins>
+         <!--    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.4.1</version>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin> -->
+            <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+				<executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/main/java/com/anupam/testng-run.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <systemPropertyVariables>
+                        <site>${site}</site>
+                        <item>${item}</item>
+                    </systemPropertyVariables >
+				<!--	<forkMode>always</forkMode>
+					<argLine>-XX:PermSize=64M -XX:MaxPermSize=256M -Xms512M -Xmx512M</argLine> -->
+                </configuration>
+            </plugin>
+        </plugins>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+    </build>
+    
 </project>
